# dnbd3

./: .clang-format  .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  Doxyfile  Kbuild.in  LOCKS  README.md  build.sh  dnbd3-client.conf.example  dnbd3-server.conf  dnbd3-server.conf.example  get-version.sh  pack.sh  server.conf.example
.github/workflows/: build-kernel-module.yml  build-programs.yml  build.yml  elefant.yml  lint.yml  release.yml  test-cow-fuse.yml
cmake/: Build.cmake  CheckAFLCCompiler.cmake  DockerImage.cmake  FindCheckPatch.cmake  FindClangFormat.cmake  FindDocker.cmake  FindFuse.cmake  FindKernelHeaders.cmake  FindLibatomic.cmake  FindStdatomic.cmake  GenerateBuild.cmake  GenerateVersion.cmake  InstallVersionFile.cmake.in  Kernel.cmake  KernelVersion.cmake  Lint.cmake  PostVersionPackaging.cmake  PreVersionPackaging.cmake  ProjectVersion.cmake  Version.cmake
cmake/toolchain/: Aarch64LinuxGnu.cmake  PowerpcLinuxGnu.cmake
conf/: CMakeLists.txt  README.server  alt-servers  rpc.acl  server.conf
inc/dnbd3/: afl.h  build.h.in  config.h  types.h  version.h.in
inc/dnbd3/config/: client.h  cow.h  server.h
inc/dnbd3/shared/: crc32.h  log.h  protocol.h  serialize.h  sockhelper.h  timing.h
pkg/: CMakeLists.txt
pkg/config/: CMakeLists.txt  alt-servers  iscsi.conf  rpc.acl  server.conf
pkg/docker/: archlinux_dockerfile  ubuntu-20-04_dockerfile
pkg/systemd/: CMakeLists.txt  dnbd3-server.service
server.config.example/: README  server.conf
src/: CMakeLists.txt  clientconfig.h  config.h  protocol.h  serialize.c  serialize.h  serverconfig.h  types.h  version.c.in  version.h
src/bench/: CMakeLists.txt  connection.c  connection.h  helper.c  helper.h  main.c
src/client/: CMakeLists.txt  client.bak  client.c
src/cowtest/: CMakeLists.txt  main.c  readme.md
src/fuse/: CMakeLists.txt  connection.c  connection.h  cowfile.c  cowfile.h  helper.c  helper.h  imageFuse.c  imageHelper.c  imageHelper.h  log.h  main.c  main.h  serialize.c
src/fuse/cowDoc/: readme.md
src/include/: types.h
src/kernel/: .clang-format  CMakeLists.txt  Kbuild  blk.c  blk.h  core.c  dnbd3.h  dnbd3_main.c  dnbd3_main.h  main.c  main.c.bak  net.c  net.h  serialize.c  serialize_kmod.c  sysfs.c  sysfs.h  utils.c  utils.h
src/server/: CMakeLists.txt  altservers.c  altservers.h  file.c  file.h  fileutil.c  fileutil.h  fuse.c  fuse.h  globals.c  globals.h  hashtable.c  hashtable.h  helper.c  helper.h  image.c  image.h  ini.c  ini.h  integrity.c  integrity.h  ipc.c  ipc.h  iscsi.c  iscsi.h  job.c  job.h  locks.c  locks.h  log.c  memlog.c  memlog.h  net.c  net.h  protocol.h  reference.c  reference.h  reftypes.h  rpc.c  rpc.h  (+21 more)
src/server/picohttpparser/: .clang-format  CMakeLists.txt  picohttpparser.c  picohttpparser.h
src/shared/: CMakeLists.txt  crc32.c  fdsignal.c  fdsignal.h  log.c  log.h  protocol.h  serialize.c  signal.c  signal.h  sockhelper.c  sockhelper.h  timing.c  timing.h
src/shared/fdsignal.inc/: eventfd.c  pipe_malloc.c
src/shared/signal.inc/: pipe64.c
